--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+.content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loginWrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+}
+
 .App {
   text-align: center;
 }
