--- a/src/components/playlist.css
+++ b/src/components/playlist.css
@@ -1,12 +1,13 @@
-.playlistButton:hover{
+.playlist:hover{
     background-color: #aaa;
     color: black;
     text-decoration: none;
     font-size: 1.8rem;
 }
 
-.playlistButton{
+.playlist{
     font-size: 1.5rem;
     color: black;
     text-decoration: none;
+    padding: 1rem;
 }
