feat: improve style on main layout

--- a/src/components/loader.css
+++ b/src/components/loader.css
@@ -1,5 +1,5 @@
 .loaderWrapper{
-  background: rgba(0,0, 0, 0.5);
+  background: rgba(0,0, 0, 0.65);
   position: absolute;
   top: 0;
   left: 0;
@@ -7,4 +7,8 @@
   bottom: 0;
   width: 100%;
   height: 100%;
+  z-index: 15;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
