--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,26 @@
 
+body{
+  height: 100vh;
+  color: #fff;
+  padding-top: 62px;
+}
+
+#root{
+  height: 100%;
+}
 
 .body-bkg{
-  position: fixed;
-  top: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
   left: 0;
-  right: 0;
-  z-index: 0;
+  top: 0;
+  position: fixed;
+  will-change: transform;
+  opacity: 1;
+  -webkit-transition: opacity .25s;
+  transition: opacity .25s;
   background-image: linear-gradient(to right bottom, rgb(63, 69, 90), rgb(0, 0, 0)), linear-gradient(transparent, rgb(0, 0, 0) 70%);
 }
 
@@ -16,9 +30,11 @@
   align-items: center;
 }
 
+.playlistsWrapper{
+  z-index: 1;
+}
+
 .loginWrapper{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 300px;
+  z-index: 1;
+  background-color: transparent;
 }
