--- a/src/components/filters/filtersWrapper.css
+++ b/src/components/filters/filtersWrapper.css
@@ -1,3 +1,11 @@
+.filtersWrapper{
+  height: 100%;
+  background-color: rgba(50,50,50,0.2);
+  min-width: 340px;
+  /* border-left: solid 1px #222; */
+}
+
+
 .filters-slider {
   z-index: 10;
   -webkit-transition: max-height .5s; 
