--- a/src/components/playlist.css
+++ b/src/components/playlist.css
@@ -1,13 +1,12 @@
 .playlist:hover{
-    background-color: #aaa;
-    color: black;
+    color: #fff;
     text-decoration: none;
     font-size: 1.8rem;
 }
 
 .playlist{
     font-size: 1.5rem;
-    color: black;
+    color: #fff;
     text-decoration: none;
     padding: 1rem;
 }
