--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 
 body{
   height: 100vh;
-  color: #fff;
   padding-top: 62px;
 }
 
@@ -24,7 +23,7 @@ body{
   background-image: linear-gradient(to right bottom, rgb(63, 69, 90), rgb(0, 0, 0)), linear-gradient(transparent, rgb(0, 0, 0) 70%);
 }
 
-.content{
+.contentLogin{
   display: flex;
   justify-content: center;
   align-items: center;
