--- a/src/components/filters/filtersWrapper.css
+++ b/src/components/filters/filtersWrapper.css
@@ -2,5 +2,6 @@
   height: 100%;
   background-color: rgba(50,50,50,0.2);
   min-width: 340px;
+  overflow-y: scroll;
   /* border-left: solid 1px #222; */
 }
