--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -3,3 +3,8 @@
   height: 30px;
   margin-right: 5px;
 }
+
+/* Fix contrast issue between background and foreground color */
+.loggedInUserDropdown b{
+  color: rgba(255,255,255,.7);
+}
